--- a/otherpages/portfolio1.html
+++ b/otherpages/portfolio1.html
@@ -25,8 +25,8 @@
                 margin-bottom: 20px;
                 margin-right: 80px;
                 border: 0;
-                height: 232px;
-                width: 300px;
+                height: 194px;
+                width: 250px;
             }
 
             .label{
@@ -36,7 +36,7 @@
                 color: white;
                 font-size: 20px;
                 font-family: Georgia, 'Times New Roman', Times, serif;
-                width: 300px;
+                width: 250px;
                 text-align: center;
             }
 
@@ -113,7 +113,7 @@
                 <div class="portfolio">
 
                     <a href="https://github.com/Shahriar87/innovation/tree/master/Fanpage" target="_blank">
-                        <img class="PortImg" src="https://upload.wikimedia.org/wikipedia/en/d/d6/Pink_Floyd_-_all_members.jpg" alt="Pink Floyd Band Members">
+                        <img class="img-fluid PortImg rounded float-left" src="https://upload.wikimedia.org/wikipedia/en/d/d6/Pink_Floyd_-_all_members.jpg" alt="Pink Floyd Band Members">
                     </a>
                     <p class="label">Fanpage!</p>
             
