--- a/otherpages/portfolio5.html
+++ b/otherpages/portfolio5.html
@@ -26,8 +26,8 @@
                 margin-bottom: 20px;
                 margin-right: 80px;
                 border: 0;
-                height: 232px;
-                width: 300px;
+                height: 194px;
+                width: 250px;
             }
 
             .label{
@@ -37,7 +37,7 @@
                 color: white;
                 font-size: 20px;
                 font-family: Georgia, 'Times New Roman', Times, serif;
-                width: 300px;
+                width: 250px;
                 text-align: center;
             }
 
@@ -114,7 +114,7 @@
                 <div class="portfolio">
 
                     <a href="https://github.com/Shahriar87/innovation/tree/master/Box%20Shape%20Change" target="_blank">
-                        <img class="PortImg" src="../images/Box-Shape.png" alt="Jiggle with Javascript">
+                        <img class="img-fluid PortImg rounded float-left" src="../images/Box-Shape.png" alt="Jiggle with Javascript">
                     </a>
                     <p class="label">Jiggle with Javascript!</p>
             
