--- a/portfolio.html
+++ b/portfolio.html
@@ -172,6 +172,18 @@
             
                 </div>
             </div>
+            <div class="col-lg-4">
+                <div class="portfolio">
+
+                    <a href="https://github.com/Shahriar87/Word-Guess-Game" target="_blank">
+                        <img class="PortImg" src="https://shahriar87.github.io/Word-Guess-Game/assets/images/Heavy%20Metal%20Background.jpg" alt="Hangman Game">
+                    </a>
+                    <p class="label">Hangman Game!</p>
+                                
+                </div>
+            </div>
+            <div class="col-lg-2">
+            </div>
         </div>
     </div>  
 
