--- a/portfolio.html
+++ b/portfolio.html
@@ -148,10 +148,10 @@
             <div class="col-lg-4">
                 <div class="portfolio">
 
-                    <a href="https://github.com/Shahriar87/HW-Wireframe" target="_blank">
-                        <img class="img-fluid PortImg rounded float-left" src="images/Easier-Layout.png" alt="HW-Wireframe">
+                    <a href="https://shahriar87.github.io/RPG-Game/" target="_blank">
+                        <img class="img-fluid PortImg rounded float-left" src="https://github.com/Shahriar87/RPG-Game/blob/master/assets/images/background.jpg?raw=true" alt="HW-Wireframe">
                     </a>
-                    <p class="label">HW-Wireframe!</p>             
+                    <p class="label">RPG-Game: Star Wars!</p>             
                 </div>
             </div>
             <div class="col-lg-2">
@@ -165,17 +165,17 @@
             <div class="col-lg-4">
                 <div class="portfolio">
 
-                    <a href="https://github.com/Shahriar87/innovation/tree/master/Box%20Shape%20Change" target="_blank">
-                        <img class="img-fluid PortImg rounded float-left" src="images/Box-Shape.png" alt="Jiggle with Javascript">
+                    <a href="https://shahriar87.github.io/TriviaGame/" target="_blank">
+                        <img class="img-fluid PortImg rounded float-left" src="https://github.com/Shahriar87/TriviaGame/blob/master/assets/images/background.jpg?raw=true" alt="Jiggle with Javascript">
                     </a>
-                    <p class="label">Jiggle with Javascript!</p>
+                    <p class="label">TriviaGame!</p>
             
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="portfolio">
 
-                    <a href="https://github.com/Shahriar87/Word-Guess-Game" target="_blank">
+                    <a href="https://shahriar87.github.io/Word-Guess-Game/" target="_blank">
                         <img class="PortImg" src="https://shahriar87.github.io/Word-Guess-Game/assets/images/Heavy%20Metal%20Background.jpg" alt="Hangman Game">
                     </a>
                     <p class="label">Hangman Game!</p>
