Updating Portfolio with Giphy API Project

--- a/portfolio.html
+++ b/portfolio.html
@@ -166,9 +166,9 @@
                 <div class="portfolio">
 
                     <a href="https://shahriar87.github.io/GiffyAPIProject/" target="_blank">
-                        <img class="img-fluid PortImg rounded float-left" src="https://github.com/Shahriar87/GiffyAPIProject/blob/master/Coverphoto.jpg?raw=true" alt="GiffyAPIProject">
+                        <img class="img-fluid PortImg rounded float-left" src="https://github.com/Shahriar87/GiffyAPIProject/blob/master/Coverphoto.jpg?raw=true" alt="GiphyAPIProject">
                     </a>
-                    <p class="label">GiffyAPIProject</p>
+                    <p class="label">GiphyAPIProject</p>
             
                 </div>
             </div>
